--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   },
   "dependencies": {
     "body-parser": "^1.15.0",
-    "express": "^4.13.4"
+    "dotenv": "^2.0.0",
+    "express": "^4.13.4",
+    "knex": "^0.10.0",
+    "pg": "^4.5.1"
   },
   "devDependencies": {
     "jspm": "^0.16.31"
