--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "dotenv": "^2.0.0",
     "express": "^4.13.4",
     "knex": "^0.10.0",
-    "pg": "^4.5.1"
+    "pg": "^4.5.1",
+    "theron": "^0.1.2"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.3",
@@ -26,7 +27,8 @@
   "jspm": {
     "dependencies": {
       "react": "npm:react@^0.14.7",
-      "react-dom": "npm:react-dom@^0.14.7"
+      "react-dom": "npm:react-dom@^0.14.7",
+      "theron": "npm:theron@^0.1.1"
     },
     "devDependencies": {
       "babel": "npm:babel-core@^5.8.24",
