--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.15.0",
     "dotenv": "^2.0.0",
     "express": "^4.13.4",
+    "hogan-express": "^0.5.2",
     "knex": "^0.10.0",
     "pg": "^4.5.1",
     "theron": "^0.1.2"
